Re-enable GJK test in spack

--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -73,7 +73,7 @@ jobs:
           spack env activate py
           pip install cppimport numba
           cd ./dolfinx-test/python/test
-          pytest -n auto --ignore=unit/fem/test_custom_jit_kernels.py --ignore=unit/geometry/test_gjk.py --ignore=unit/function/test_function.py .
-          mpirun -np 2 pytest --ignore=unit/fem/test_custom_jit_kernels.py --ignore=unit/geometry/test_gjk.py --ignore=unit/function/test_function.py .
+          pytest -n auto --ignore=unit/fem/test_custom_jit_kernels.py --ignore=unit/function/test_function.py .
+          mpirun -np 2 pytest --ignore=unit/fem/test_custom_jit_kernels.py --ignore=unit/function/test_function.py .
 
 
