--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    if: ${{ github.repository == 'FEniCS/dolfinx' && github.ref == 'refs/head/master' }}
+    # if: ${{ github.repository == 'FEniCS/dolfinx' && github.ref == 'refs/head/master' }}
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-10.15]
