--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,7 +36,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install FEniCS Python components
-        run: python3 -m pip install git+https://github.com/FEniCS/fiat.git git+https://github.com/FEniCS/ufl.git git+https://github.com/FEniCS/ffcx.git
+        run: |
+          python3 -m pip install setuptools_scm wheel pkgconfig
+          python3 -m pip install git+https://github.com/FEniCS/fiat.git git+https://github.com/FEniCS/ufl.git git+https://github.com/FEniCS/ffcx.git
 
       - name: Flake8 checks
         run: |
