Disable actions VM workaround

--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -2,9 +2,9 @@ name: Spack build
 
 on:
   # Uncomment the below 'push' to trigger on push
-  # push:
-  #  branches:
-  #    - "**"
+  push:
+   branches:
+     - "**"
   schedule:
     # '*' is a special character in YAML, so string must be quoted
     - cron: "0 2 * * THU"
@@ -33,8 +33,8 @@ jobs:
       - name: Install compilers
         run: |
           sudo apt-get update
-          sudo apt-get install grub-efi
-          sudo update-grub
+          # sudo apt-get install grub-efi
+          # sudo update-grub
           sudo apt-get upgrade
           sudo apt-get install g++-10 gfortran-10 grub-efi
         if: matrix.os == 'ubuntu-20.04'
