--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -14,7 +14,8 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-20.04, macos-10.15]
-        os: [ubuntu-20.04]
+        # os: [ubuntu-20.04]
+        os: [macos-10.15]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
